[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "multistream"
version = "0.1.0"

[dependencies]
bytes = "0.4.4"
slog = "2.0.12"
tokio-io = "0.1.2"

[dependencies.msgio]
path = "../msgio-rs"

[dependencies.futures-await]
git = "https://github.com/Nemo157/futures-await"
rev = "alternate-signatures"
